2003-04-17  William A. Perkins  <william.perkins@pnl.gov>

	* Makefile.am: add a target from makefile.linux to make mass2.ps
	using a2ps

	* mass2_main_025.f90 (buildghost): go back to extrapolating the
	bottom elevation in ghost cells (instead of level)
	(compute_uflow_area): use the depth at the boundary, not the depth
	in the ghost cell

2003-04-16  William A. Perkins  <william.perkins@pnl.gov>

	* mass2_main_025.f90: adjust for changes to routines in
	block_bc_module.f90 

	* block_bc_module.f90: check the language of the bcspecs.dat and
	scalar_bcspecs.dat files when read; eliminate the use of
	error_iounit and status_iounit

2003-04-15  William A. Perkins  <william.perkins@pnl.gov>

	* test/benchmark/jda/bcspecs.dat: use a DEAD zone

	* test/benchmark/mcn-test/BCFiles/MCN_FBZ.prn: Had the wrong
	period; found when time series code was replaced. Previous
	simulation results from this case cannot be trusted.

2003-04-08  William A. Perkins  <william.perkins@pnl.gov>

	* mass2.f90: close the error and status output files AFTER
	everything else

	* bed_source.f90: do not use table_entry_struct any more

	* table_bc_module.f90: use time_series 

	* test/benchmark/mcn-test/results.txt (file): timed some tests
	with CGNS on/off

2003-04-04  William A. Perkins  <william.perkins@pnl.gov>

	* transport_only_module.f90: CALL open_existing instead of
	directly OPENing file; CALL error_message and status_message

	* tdg_source.f90 (tdg_read_param): CALL open_existing instead of
	directly OPENing file; CALL status_message instead of WRITEing

	* bed.f90: CALL open_existing instead of directly OPENing
	files; CALL error_message and status_message instead of WRITEing 

	* bed_source.f90: CALL open_existing instead of directly OPENing
	files; CALL error_message and status_message instead of WRITEing

	* profile_init.f90 (profile_init): CALL open_existing instead of
	directly OPENing a the file

	* plot_cgns.f90: CALL error_message instead of writing to
	error_iounit. 
